test/src/e2e_vm_tests/test_programs/should_fail/superabi_trait/src/main.sw
contract;

abi MySuperAbi {
    fn super_abi_method();
}

// error: traits cannot have superABIs
trait MyAbi : MySuperAbi {
    fn abi_method();
}
